# arescope

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml
arescope/: __init__.py  auth.py  cli.py  config.py  graph.py  magic.py  mailer.py  manage.py  schemas.py  service.py  taxonomy.py
arescope/api/: main.py
arescope/connectors/: __init__.py  _identity.py  _webfilter.py  apify.py  base.py  bluesky.py  brave.py  browser.py  exif.py  ghunt.py  github.py  gravatar.py  hibp.py  holehe.py  hudsonrock.py  instagram_web.py  intelx.py  ip_sources.py  leakcheck.py  (+14 more)
aresis/: __init__.py  cli.py  config.py  schemas.py  service.py  taxonomy.py
deploy/: README.md  docker-compose.web.yml  enable-tls-arescope.sh
docs/: AI_PIPELINE.md  ARCHITECTURE.md  CONNECTORS.md  CONNECTOR_EXPANSION_PLAN.md  DEEP_SEARCH_PLAN.md  DISTRIBUTION.md  EXTENDED_SEARCH_PLAN.md  EXTENDED_SEARCH_SCOPE.md  FINDINGS_TAXONOMY.md  GRAPH.md  MASTER_PLAN.md  OWNERSHIP_VERIFICATION.md  POSITIONING.md  ROADMAP.md  STATUS.md  TOOLING_EVAL.md  TOOLS.md  UI_OVERHAUL_PLAN.md  WEBSITE_REDESIGN.md
scripts/: patch_ghunt_people.py  refresh_broker_registry.py
tests/: test_account_deletion.py  test_clustering.py  test_connectors.py  test_evaluate.py  test_github_repos.py  test_graph.py  test_identity_connectors.py  test_instagram_web.py  test_linkedin.py  test_magic.py  test_map_overhaul.py  test_normalizer.py  test_resolution.py  test_service_reconstruct.py  test_shodan.py  test_telegram.py
web/: astro.config.mjs  package-lock.json  package.json
(+67 files in other folders)
