[project]
name = "arescope"
version = "0.1.0"
description = "Personal exposure scanner & privacy remediation engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "celery>=5.4",
    "redis>=5.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "httpx>=0.28",
    "cryptography>=44.0",
    "argon2-cffi>=23.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
# Self-hosted OSINT tool libs. Optional + pinned: they break often and pull
# heavy/old dep trees, and our connectors degrade gracefully when absent
# (ImportError / missing-CLI => coverage gap, never a scan failure). Install with
# `pip install -e ".[connectors]"` when you want the Holehe/Maigret connectors live.
connectors = [
    "holehe==1.61",
    "maigret==0.6.1",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arescope"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
